<resources>
    <string name="app_name">Go4Lunch</string>

    //FOR BOTTOM NAVIGATION BAR
    <string name="map">Map View</string>
    <string name="list">List View</string>
    <string name="workmates">Workmates</string>
    <string name="map_view_desc">icon map to see the map</string>
    <string name="list_map_view_desc">icon list to see the restaurants\' list</string>
    <string name="workmates_desc">icon with people to see workmates</string>

    //FOR DETAIL ACTIVITY
    <string name="imageDescription">Restaurant\'s picture</string>
    <string name="fab_add">button to add a restaurant</string>
    <string name="ic_phone">phone icon to call restaurant</string>
    <string name="call">call</string>
    <string name="ic_like">icon to like the restaurant</string>
    <string name="like">like</string>
    <string name="unlike">unlike</string>
    <string name="ic_website">icon world to get restaurant\'s website</string>
    <string name="website">website</string>
    <string name="photo_description">workmate profile photo</string>
    <string name="icon_workmates">person icon</string>

    //FOR FIREBASE LAYOUT
    <string name="logo">bowl drawing logo go4Lunch</string>
    <string name="catch_phrase">Find a nice restaurant and invite your co-workers for lunch !</string>
    <string name="backgroundDescription">clementine image for background</string>
    <string name="no_restaurant_chosen">hasn\'t decided yet</string>
    <string name="is_eating">is eating at </string>
    <string name="cancelled_signin">sign in cancelled</string>
    <string name="no_network">internet connexion failed</string>
    <string name="unknown_error">Unknown error </string>
    <string name="is_joining">is joining</string>

    //FOR DRAWER
    <string name="lunch">your lunch</string>
    <string name="chat">chat</string>
    <string name="settings">settings</string>
    <string name="logout">logout</string>
    <string name="no_lunch_chosen">You haven\'t chosen a restaurant yet !</string>

    //FOR TOP APP BAR
    <string name="hungry_string">I\'m Hungry !</string>
    <string name="search">search</string>

    //FOR DIALOG SETTINGS
    <string name="lunch_choice">This is your destination to eat : </string>
    <string name="change">change</string>
    <string name="settings_title">Settings</string>
    <string name="no_restaurant_found">No restaurant found 🥺</string>

    //FOR NOTIFICATION
    <string name="notification_reminder">"Dinner's ready ! " </string>
    <string name="first_part_notif">"Hello ! Don't forget to go eat at %1$s, %2$s"</string>
    <string name="second_part_notif">"with %1$s"</string>
    <string name="give_notif_permission">Give permission to receive notifications please !</string>

    //FOR LIST FRAGMENT
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="restaurant">restaurant</string>

    //CHAT ACTIVITY
    <string name="chat_error">This thread has no messages..</string>
    <string name="compose_message">Compose your message</string>
    <string name="send">send</string>

</resources>