<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <!-- Placeholder for restaurant's image -->
    <ImageView
        android:id="@+id/image_restaurant"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/imageDescription"
        tools:srcCompat="@drawable/no_img_available"
        />
    <!-- Container for restaurant's information-->
    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="vertical"
        android:background="?colorPrimary"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/image_restaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <!-- Linear layout for restaurant's name and rating stars-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <!-- restaurant's name and rating bar -->
            <TextView
                android:id="@+id/name_restaurant"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="20sp"
                android:textColor="?colorOnPrimary"
                tools:text="Le Zinc"/>
            <RatingBar
                android:id="@+id/rating"
                android:padding="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="3"
                style="?android:attr/ratingBarStyleSmall"
                android:isIndicator="true"
                android:progressTint="#FFCC01"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                />
        </LinearLayout>

        <!-- For the restaurants address -->
        <TextView
            android:id="@+id/address_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorOnPrimary"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="12 Rue du Faubourg Poissonière"/>
    </LinearLayout>

    <!-- Button to add a restaurant to user's favorite list -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_restaurant"
        android:contentDescription="@string/fab_add"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorBgdBtn"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_add_circle_24"
        app:tint="@null"/>

    <!-- LinearLyt for call, like and website button -->
    <LinearLayout
        android:id="@+id/lyt_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/info_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="8dp"
        >
        <!-- Lyt for call -->
        <LinearLayout
            android:id="@+id/lyt_call"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/call_btn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:scaleType="fitCenter"
                app:tint="@color/red"
                app:srcCompat="@drawable/baseline_call_24"
                android:contentDescription="@string/ic_phone"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?selectableItemBackgroundBorderless"
                />
            <TextView
                android:id="@+id/call_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textStyle="bold"
                android:textColor="?colorPrimary"/>

        </LinearLayout>
        <!-- Lyt for like -->
        <LinearLayout
            android:id="@+id/lyt_like"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            >
            <ImageView
                android:id="@+id/like_btn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:scaleType="fitCenter"
                app:tint="@color/red"
                app:srcCompat="@drawable/baseline_star_24"
                android:contentDescription="@string/ic_like"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:textStyle="bold"
                android:textColor="@color/red"/>
        </LinearLayout>
        <!-- Lyt for website -->
        <LinearLayout
            android:id="@+id/lyt_website"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/website_btn"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:scaleType="fitCenter"
                app:tint="@color/red"
                app:srcCompat="@drawable/baseline_public_24"
                android:contentDescription="@string/ic_website"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?selectableItemBackgroundBorderless"
                />
            <TextView
                android:id="@+id/website_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textStyle="bold"
                android:textColor="?colorPrimary"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Separation -->
    <View
        android:id="@+id/separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorBgdBtn"
        app:layout_constraintBottom_toBottomOf="@id/lyt_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/workmates_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/separation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>